kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-java-app-service
  namespace: mini-java-app
  labels:
    app: mini-java-app
spec:
  type: ClusterIP
  selector:
    app: mini-java-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: None
